--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import TheExperience from '../components/TheExperience.vue';
 		<Header title={SITE_TITLE} />
 		<TheExperience client:load />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+			<h1>🧑‍🚀 Hello to 3D visualization</h1>
 			<p>
 				Welcome to the official <a>Astro</a> blog starter template.
 			</p>
