--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,11 +19,8 @@ import TheExperience from '../components/TheExperience.vue';
 			<p>
 				Welcome to the official <a>Astro</a> blog starter template.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>Here are a few ideas:</p>
 			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
 				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
 				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
 			</ul>
