--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,6 +34,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				margin: auto;
 				padding: 1em;
 				color: rgb(var(--gray-dark));
+				gradient: var(--gradient);
+				border-radius: 12px;
+				box-shadow: var(--box-shadow);
 			}
 			.title {
 				margin-bottom: 1em;
